<resources>
    <string name="app_name">Smart Money EveryDay SA_1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="new_transaction">New Transaction</string>
    <string name="add_daily_spending_desc">Add your daily spending and attachments.</string>
    <string name="pay_from_account">Pay From Account</string>
    <string name="amount_r">Amount (R)</string>
    <string name="time_allocation">Time Allocation</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="categories">Categories</string>
    <string name="add_new">Add New</string>
    <string name="groceries">Groceries</string>
    <string name="transport">Transport</string>
    <string name="utilities">Utilities</string>
    <string name="food">Food</string>
    <string name="rent">Rent</string>
    <string name="health">Health</string>
    <string name="shopping">Shopping</string>
    <string name="entertainment">Entertainment</string>
    <string name="education">Education</string>
    <string name="insurance">Insurance</string>
    <string name="maintenance">Maintenance</string>
    <string name="travel">Travel</string>
    <string name="personal_care">Personal Care</string>
    <string name="attachments_label">Attachments (Receipts / Lists)</string>
    <string name="no_photo_attached">No Photo Attached</string>
    <string name="take_photo">Take Photo</string>
    <string name="upload">Upload</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="add_expense">Add Expense</string>
    <string name="attached_image">Attached Image</string>
    <string name="camera_icon">Camera Icon</string>
    <string name="app_logo_desc">Smart Money Logo</string>

    <string name="from_account">From Account</string>
    <string name="to_account">To Account</string>
    <string name="transfer_amount">Transfer Amount</string>
    <string name="confirm_transfer">Confirm Transfer</string>
    <string name="cheque_account">Cheque Account</string>
    <string name="smart_saver">Smart Saver</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="navigation_back">Navigate back</string>
    <string name="visa_credit_card">Visa Credit Card</string>
    <string name="error_same_account">From and To accounts must be different</string>
    <string name="transfer_success">Transfer of R %1$s from %2$s to %3$s was successful!</string>
    <string name="error_enter_amount">Please enter an amount</string>
    <string name="transfer_to">Transfer to %1$s</string>
    <string name="transfer_from">Transfer from %1$s</string>
    <string name="category_transfer">Transfer</string>
    <string name="type_outgoing">Outgoing</string>
    <string name="type_income">Income</string>

    <string name="daily_spend_status">Today: R %1$,.2f used of R %2$,.0f daily limit (%3$d%%)</string>
    <string name="spending_projection">⚠️ On track to spend R %1$,.0f (Over Limit!)</string>
    <string name="monthly_spend_status_spent">%1$s spent of R %2$,.0f limit</string>
    <string name="monthly_spend_status_over_limit">%1$s spent of R %2$,.0f limit (Over Limit!)</string>
    <string name="monthly_spend_status_no_limit">%1$s spent</string>
    <string name="monthly_spend_status_goal_min">\nGoal: spend at least R %1$,.0f</string>
    <string name="monthly_spend_status_goal_reached">\nMin goal reached! ✅</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>