<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@android:drawable/ic_menu_revert"
            app:navigationContentDescription="@string/navigation_back"
            app:title="@string/transfer_money"
            app:titleTextColor="@color/primary" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/labelFromAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_account"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/from_account"
                app:hintEnabled="false"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black">
                <AutoCompleteTextView
                    android:id="@+id/fromAccountDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="@string/cheque_account"
                    android:textColor="@color/black"
                    android:labelFor="@id/labelFromAccount" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/labelToAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_account"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:hint="@string/to_account"
                app:hintEnabled="false"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black">
                <AutoCompleteTextView
                    android:id="@+id/toAccountDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="@string/smart_saver"
                    android:textColor="@color/black"
                    android:labelFor="@id/labelToAccount" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/labelTransferAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transfer_amount"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:layout_marginBottom="16dp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount_r"
                app:prefixText="R "
                app:prefixTextColor="@color/black"
                android:layout_marginBottom="32dp"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/transferAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:labelFor="@id/labelTransferAmount" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/confirmTransferButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/confirm_transfer"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>